[package]
name = "big_mac"
version = "0.1.1"
edition = "2021"
author = "PROMETHIA"
description = "A metamacro toolkit for writing complex macros."
readme = "README.md"
repository = "https://github.com/PROMETHIA-27/big_mac/"
license = "MIT"
keywords = ["macros", "metamacros", "syntax"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
